# morum

./: .gitignore  .gitmodules  Cargo.toml  build.rs  flake.nix
base/: Cargo.toml
base/src/: lib.rs  params.rs  types.rs
src/: action.rs  appservice.rs  config.rs  error.rs  lib.rs  main.rs  matrix.rs
src/appservice/: client.rs  mod.rs
src/web/: action.rs  category_list.rs  extract.rs  login.rs  mod.rs  post.rs  post_list.rs  user_error.rs
ui/: Cargo.toml  Trunk.toml  build.rs  index.html
ui/src/: category_list.rs  lib.rs  login.rs  main.rs  persisted.rs  post.rs  post_list.rs
ui/styles/: base.scss  contrast.scss  dark.scss  events.scss  highlight-dark.scss  highlight.scss  icons.scss  nav.scss  variables.scss
