[package]
name = "morum"
version = "0.1.0"
edition = "2021"
authors = ["Wei Tang <wei@pacna.org"]
license = "AGPL-3.0"
description = "Matrix forum"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
cookie = "0.16"
async-trait = "0.1"
derive_more = "0.99"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "8"
thiserror = "1"
ruma = { version = "0.7", features = ["full", "unstable-sanitize", "rand"] }
ruma-client = { version = "0.10", features = ["hyper", "hyper-rustls"] }
ruma-macros = "0.10"
clap = { version = "4", features = ["derive"] }
url = "2"
hyper = "0.14"
hyper-rustls = "0.23"
regex = "1"
http = "0.2"
assign = "1"
js_int = "0.2"
pulldown-cmark = "0.9"
include_dir = "0.7"
axum = { version = "0.6", features = ["headers", "macros", "form"] }
axum-extra = { version = "0.4", features = ["cookie", "cookie-private"] }
east = { git = "https://github.com/corepaper/east" }
east-build = { git = "https://github.com/corepaper/east" }

morum-base = { path = "base" }
morum-ui = { path = "ui" }

[build-dependencies]
east-build-helper = { git = "https://github.com/corepaper/east" }

[workspace]
members = ["ui"]