[package]
name = "morum"
version = "0.1.0"
edition = "2021"
authors = ["Wei Tang <wei@pacna.org"]
license = "AGPL-3.0"
description = "Matrix forum"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
cookie = "0.16"
async-trait = "0.1"
derive_more = "0.99"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "8"
thiserror = "1"
ruma = { git = "https://github.com/ruma/ruma", rev = "b859d9c8b09ca6c2bb6d1c2788d133295579c090", features = ["unstable-sanitize", "rand"] }
ruma-macros = { git = "https://github.com/ruma/ruma", rev = "b859d9c8b09ca6c2bb6d1c2788d133295579c090" }
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "8cc632ffd15da600b27dc776adb0ebc2c70f46f8", default-features = false, features = ["sled", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
url = "2"
hyper = "0.14"
regex = "1"
http = "0.2"
assign = "1"
js_int = "0.2"
pulldown-cmark = "0.9"
include_dir = "0.7"
axum = { version = "0.6", features = ["headers", "macros", "form"] }
axum-extra = { version = "0.4", features = ["cookie", "cookie-private"] }
east = { git = "https://github.com/corepaper/east" }
east-build = { git = "https://github.com/corepaper/east" }

morum-base = { path = "base" }
morum-ui = { path = "ui" }

[build-dependencies]
east-build-helper = { git = "https://github.com/corepaper/east" }

[workspace]
members = ["ui"]