[package]
name = "morum-ui"
version = "0.1.0"
authors = ["Wei Tang <wei@pacna.org"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew" }
gloo-storage = "0.2"
gloo-net = "0.2"
serde = { version = "1", features = ["derive"] }

morum-base = { path = "../base" }

[build-dependencies]
build-helper = "0.1.1"