[package]
name = "morum-ui"
version = "0.1.0"
authors = ["Wei Tang <wei@pacna.org"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }
east = { git = "https://github.com/corepaper/east" }

morum-base = { path = "../base" }

[build-dependencies]
build-helper = "0.1.1"